# seconddisplay

./: NOTES  TODO
py/: peertalk.py  usbmux.py
rust/usbmux/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
rust/usbmux/src/: client.rs  lib.rs
