[package]
name = "usbmux"
version = "0.1.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]

description = "A client library to communicate with usbmuxd (USB multiplexer daemon)."
repository = "https://github.com/zummenix/usbmux"
readme = "README.md"
keywords = ["usbmux", "usbmuxd", "ios", "devices"]

license = "MIT OR Apache-2.0"

[dependencies]
unix_socket = "0.5.0"
byteorder = "0.5.0"
plist = { git = "https://github.com/zummenix/rust-plist", version = "0.0.12" }
try_opt = "0.1.1"

[dev-dependencies]
expectest = "0.4.1"

