[package]
name = "usbmux"
version = "0.1.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]
edition = "2018"

description = "A client library to communicate with usbmuxd (USB multiplexer daemon)."
repository = "https://github.com/zummenix/usbmux"
readme = "README.md"
keywords = ["usbmux", "usbmuxd", "ios", "devices"]

license = "MIT OR Apache-2.0"

[dependencies]
unix_socket = "0.5.0"
byteorder = "0.5.0"
plist = { git = "https://github.com/zummenix/rust-plist", version = "0.0.12" }
try_opt = "0.1.1"
xcb = {version = "0.8.2", features = ["shm"]}
xcb-util = {version = "0.2.1", features = ["shm", "image"]}
bmp = "0.4"

[dev-dependencies]
expectest = "0.4.1"

